src/objects/Housing_Application_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type/ Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Return and W-2 Forms</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Income Tax Affidavit</fullName>
                </value>
                <value>
                    <fullName>Bank Statement</fullName>
                </value>
                <value>
                    <fullName>Retirement Account Statement</fullName>
                </value>
                <value>
                    <fullName>Verification of Employment Form</fullName>
                </value>
                <value>
                    <fullName>Employment Offer Letter</fullName>
                </value>
                <value>
                    <fullName>Pay stub</fullName>
                </value>
                <value>
                    <fullName>Profit/Loss Statement</fullName>
                </value>
                <value>
                    <fullName>Schedule C</fullName>
                </value>
                <value>
                    <fullName>Self-employed Affidavit</fullName>
                </value>
                <value>
                    <fullName>Unemployed Affidavit</fullName>
                </value>
                <value>
                    <fullName>Gift Letter</fullName>
                </value>
                <value>
                    <fullName>Loan Pre-approval Letter</fullName>
                </value>
                <value>
                    <fullName>First Time Homebuyer Certificate</fullName>
                </value>
                <value>
                    <fullName>HomeownershipSF Consent Form</fullName>
                </value>
                <value>
                    <fullName>Lender’s Certificate of Borrower’s Eligibility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_Application__c</fullName>
        <label>Related To</label>
        <referenceTo>Housing_Application__c</referenceTo>
        <relationshipLabel>Housing Application Attachments</relationshipLabel>
        <relationshipName>Housing_Application_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/housingprograms/servlet/servlet.FileDownload?file=&quot;+Type__c,&quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Housing Application Attachment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Application Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>